Очередная замена горячих клавиш всвязи с тем, что все занято! Теперь nvda+shift+w; Также зарезервированы горячие клавиши nvda+ctrl+w, nvda+ctrl+shift+w; Включен пакет для локализации. Минорная версия шагнула вперед, теперь - 0.2.

--- a/UsefulDictionary/manifest.ini
+++ b/UsefulDictionary/manifest.ini
@@ -1,5 +1,5 @@
-name = UsefulDictionary
+﻿name = UsefulDictionary
 summary = "Useful dictionary with hotkeys"
-version = 0.1
-description = """Предоставляет информацию из словаря о выделенном слове , используйте nvda+shift+v"""
+version = 0.2
+description = """ It is shows information about selected word or phrase. Select text and press hotkey nvda+shift+w """
 author = "Bogdan Radionov <radionov.bogdan@gmail.com>"
