Добавлен Yandex переводчик.

--- a/UsefulDictionary/globalPlugins/UsefulDictionary/config.cfg
+++ b/UsefulDictionary/globalPlugins/UsefulDictionary/config.cfg
@@ -1,5 +1,6 @@
 {
-    "mediawiki": "ru", 
+    "mediawiki": "en", 
     "dictionarybox": "auto", 
-    "selected_dict": "mediawiki"
+    "selected_dict": "yandextranslator", 
+    "yandextranslator": "en-ru"
 }
