Добавлена возможность отправлять текст из буфера обмена по клавишам nvda+shift+w; Добавлены соответствующие сообщения в локализацию; Минорная версия шагнула вперед - теперь 0.6; Обновлен установочный пакет.

--- a/UsefulDictionary/manifest.ini
+++ b/UsefulDictionary/manifest.ini
@@ -3,3 +3,4 @@ summary = "Useful dictionary with hotkeys"
 version = 0.5
 description = """ It is shows information about selected word or phrase. Read readme for details. """
 author = "Bogdan Radionov <radionov.bogdan@gmail.com>"
+url = http://github.com/BogdanRadionov/nvda-usefuldictionary
