--- a/UsefulDictionary/manifest.ini
+++ b/UsefulDictionary/manifest.ini
@@ -1,5 +1,6 @@
 ﻿name = UsefulDictionary
 summary = "Useful dictionary with hotkeys"
-version = 0.5
+version = 0.6
 description = """ It is shows information about selected word or phrase. Read readme for details. """
 author = "Bogdan Radionov <radionov.bogdan@gmail.com>"
+url = http://github.com/BogdanRadionov/nvda-usefuldictionary
