--- a/UsefulDictionary/globalPlugins/UsefulDictionary/config.cfg
+++ b/UsefulDictionary/globalPlugins/UsefulDictionary/config.cfg
@@ -1,6 +1,7 @@
 {
     "mediawiki": "en", 
     "dictionarybox": "auto", 
-    "selected_dict": "yandextranslator", 
-    "yandextranslator": "en-ru"
+    "selected_dict": "yandexdictionary", 
+    "yandextranslator": "en-ru",
+    "yandexdictionary": "en-ru"
 }
