Добавлен модуль proxy в тестовом режиме. Реализован запрос через прокси в yandex translator в тестовом режиме. В конфиг добавлены ключи proxy_address, proxy.

--- a/UsefulDictionary/globalPlugins/UsefulDictionary/config.cfg
+++ b/UsefulDictionary/globalPlugins/UsefulDictionary/config.cfg
@@ -1,7 +1,9 @@
 {
-    "mediawiki": "en", 
     "dictionarybox": "auto", 
-    "selected_dict": "yandexdictionary", 
-    "yandextranslator": "en-ru",
-    "yandexdictionary": "en-ru"
+    "yandextranslator": "en-ru", 
+    "selected_dict": "yandextranslator", 
+    "mediawiki": "en", 
+    "yandexdictionary": "en-ru", 
+    "proxy_address": "198.50.219.239:80", 
+    "proxy": true
 }
