На скорую руку переработан конфиг (в будущем переписать нормально, ибо стыдоба). добавлена возможность включать/выключать proxy. Последний ищется автоматически, но обработка возможных ошибок не делается. Добавлен пункт в меню nvda, где и можно включать/выключать опцию.

--- a/UsefulDictionary/globalPlugins/UsefulDictionary/config.cfg
+++ b/UsefulDictionary/globalPlugins/UsefulDictionary/config.cfg
@@ -4,6 +4,6 @@
     "selected_dict": "yandextranslator", 
     "mediawiki": "en", 
     "yandexdictionary": "en-ru", 
-    "proxy_address": "198.50.219.239:80", 
-    "proxy": true
+    "proxy_address": null,
+    "proxy": false
 }
